--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ application {
     mainClass = 'hexlet.code.App'
 }
 
+compileJava {
+    options.release = 17
+}
+
 test {
     useJUnitPlatform()
 }
