--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,8 +1,8 @@
 name: github-actions
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+
+on: [push, pull_request]
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
