--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'info.picocli:picocli:4.7.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter-params:5.9.0',
+            'org.slf4j:slf4j-log4j12:2.0.3',
+            'org.assertj:assertj-core:3.23.1'
+    )
 }
 
 application {
