--- a/app/Makefile
+++ b/app/Makefile
@@ -4,4 +4,10 @@ build:
 	./gradlew clean build
 lint:
 	./gradlew checkstyleMain
+report:
+	./gradlew jacocoTestReport
+clean:
+	./gradlew clean
+test:
+	./gradlew test
 .PHONY: build
