--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,4 +36,5 @@ jobs:
           JACOCO_SOURCE_PATH: ./app/src/main/java
         with:
           coverageCommand: make report
+          uses: cc-test-reporter after-build
           coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
